--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,26 +12,13 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <meta property="og:title" content="React Boilerplate Example App" />
-    <meta property="og:description" content="" />
-    <meta
-      property="og:image"
-      content="https://repository-images.githubusercontent.com/250347048/15514f00-8713-11ea-9f9d-796a89b5de4d"
-    />
-    <title>React Boilerplate Example App</title>
-    <meta
-      name="description"
-      content=""
-    />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+  crossorigin="anonymous"
+/>
+    <meta name="description" content="" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
